--- a/views/ticket.ejs
+++ b/views/ticket.ejs
@@ -354,7 +354,7 @@
 
                         <li>
                             <span class="k">Servicio</span>
-                            <span class="v"><%= row.type === "PASSENGER" ? "Pasajeros" : "Paquetería / Mandado" %></span>
+                            <span class="v"><%= row.type === "PASSENGER" ? "Pasajeros" : "Paquetería" %></span>
                         </li>
 
                         <% if (row.type === "PASSENGER") { %>
